fixed alignement of placeholder in single select

--- a/dev/sass/qwiki/_select2skin.scss
+++ b/dev/sass/qwiki/_select2skin.scss
@@ -56,7 +56,7 @@
                 float: none;
             }
 
-            .select_label {
+            .select_label, .select2-selection__placeholder {
                 margin-left: 0;
                 margin-right: auto;
             }
